Wed Jan 25 16:54:40 1995  Chris Provenzano (proven@mit.edu)

        * Removed all narrow types and references to wide.h and narrow.h

Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)

    * Added krb5_context to all krb5_routines

Thu Dec  8 00:33:05 1994    <tytso@rsx-11.mit.edu>

	* do_tgs_req.c (prepare_error_tgs): Don't free the passed in
		ticket; it will be freed as part of other structures.

	* do_tgs_req.c (process_tgs_req): Set the encryption type in the
		reply structure, and set the eblock type accordingly.

Wed Dec  7 13:36:34 1994    <tytso@rsx-11.mit.edu>

	* do_as_req.c (process_as_req): Set the encryption type in the
		reply_encpart structure.

	* kdc_util.c (validate_as_request): 
	* policy.c (against_local_policy_as): Move requirement that an AS
		request must include the addresses field to the local
		policy routine.  (Not required by RFC).

	* main.c (setup_com_err): Initialize the kdc5 error table (the
		kdb5 error table is already initialized)

Wed Nov 30 16:37:26 1994  Theodore Y. Ts'o  (tytso@dcl)

	* confiugre.in: Add appropriate help text for --with-krb4
		option.

Mon Nov 21 17:23:50 1994  Theodore Y. Ts'o  (tytso@dcl)

	* do_tgs_req.c (process_tgs_req):
	* do_as_req.c (process_as_req): Use the list of encryption types
		passed as part of the KDC request to determine which
		encryption to use for encrypting the ticket.  The
		encryption must be one that is supported by the KDC, as
		well as being one which is marked as being supported by
		the server of the ticket.  In a AS request, also use this
		encryption for encrypting the KDC response.  In a TGS
		request, use the encryption type of the TGT authenticator
		to determine how to encrypt the KDC response. 

Tue Nov  8 17:51:30 1994  Theodore Y. Ts'o  (tytso@dcl)

	* do_tgs_req.c (process_tgs_req): Use published interface to call
		krb5_random_key().

Mon Nov  7 22:11:01 1994  Theodore Y. Ts'o  (tytso@dcl)

	* kerberos_v4.c: Don't define functions manually, but pull in the